<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_finalizar"
        android:icon="@drawable/ic_check"
        android:title="@string/finalizar_edicion"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_deshacer"
        android:icon="@drawable/ic_undo"
        android:title="@string/deshacer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reiniciar"
        android:icon="@drawable/ic_delete"
        android:title="@string/reiniciar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancelar"
        android:icon="@drawable/ic_cancel"
        android:title="@string/cancelar"
        app:showAsAction="always" />

</menu>
